--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,16 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context="jalonghan.com.java.MainActivity">
+
+
 
     <Button
         android:id="@+id/CacheImmutale"
         android:layout_width="wrap_content"
+
         android:layout_height="wrap_content"
         android:text="测试缓存类看log"
         />
 
-</android.support.constraint.ConstraintLayout>
+
+    <Button
+        android:id="@+id/abstracttest"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="抽象类作用"
+        />
+
+</LinearLayout>
